2010-05-25  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/CodeSegmentPreviewWindow.cs: Removed debug
	  code.

2010-05-25  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/GutterMargin.cs:
	* Mono.TextEditor/FoldMarkerMargin.cs: Fixed gutter drawing
	  bug/made change marker smaller.

2010-05-25  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Ensure that the lineheight is
	  up to date in the optionschanged event chain.

2010-05-25  Mike Krüger  <mkrueger@novell.com>

	* Styles/OblivionStyle.xml:
	* Styles/TangoLightStyle.xml:
	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/GutterMargin.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/DashedLineMargin.cs:
	* Mono.TextEditor/FoldMarkerMargin.cs:
	* Mono.TextEditor.Highlighting/Style.cs: Worked on text editor
	  outfit.

2010-05-25  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/PangoUtil.cs: Fix calling conventions for
	  gtk/pango on Windows.

2010-05-25  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Theatrics/SmartScrolledWindow.cs: Did some
	  minor changes at smartscrolledwindow.

2010-05-25  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor.Theatrics/SmartScrolledWindow.cs: Worked on
	  scrolled window replacement.

2010-05-25  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/DocumentLocation.cs: fixed operator.

2010-05-21  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/Platform.cs:
	* Mono.TextEditor/SimpleEditMode.cs:
	* Mono.TextEditor.Vi/ViActionMaps.cs:
	* Mono.TextEditor/TextLinkEditMode.cs: More shift-tab fixage.

2010-05-21  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Corrected rounding of
	  fold rectangles.

2010-05-21  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Fixed bug in logical line
	  number calculation.

2010-05-21  Mike Krüger  <mkrueger@novell.com>
